# obsidian-rag-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: .orag.toml.example  README.md
obsidian_rag/: __init__.py
obsidian_rag/api/: __init__.py  client.py
obsidian_rag/cli/: __init__.py  main.py  output.py
obsidian_rag/cli/commands/: __init__.py  init.py
obsidian_rag/core/: __init__.py  config.py  indexer.py  models.py  searcher.py
tests/: __init__.py  test_config.py
